# dependencies

./: .gitignore  ArcDependenciesConfig.cmake.in  CMakeLists.txt  GetDotNet.cmake
nuget_fallback/: microsoft.aspnetcore.app.ref.3.1.0.nupkg  microsoft.netcore.app.host.linux-x64.3.1.0.nupkg  microsoft.netcore.platforms.1.1.2.nupkg  microsoft.netcore.targets.1.1.4.nupkg  mono.texttemplating.2.0.5.nupkg  netstandard.library.2.0.2.nupkg  newtonsoft.json.13.0.1.snupkg  newtonsoft.json.13.0.3.snupkg  numpy.bare.3.11.1.33.nupkg  pythonnet.3.0.3.snupkg  scriban.3.3.2.nupkg  scriban.5.5.0.nupkg  scriban.5.5.0.snupkg  scriban.5.9.1.nupkg  scriban.5.9.1.snupkg  scriban.7.2.0.nupkg  scriban.7.2.0.snupkg
